--- a/layouts/404.html
+++ b/layouts/404.html
@@ -2,7 +2,7 @@
 <html lang="{{.Site.LanguageCode}}">
     <head>
         {{partial "head-meta.html" .}}
-        {{partial "style-default.html" .}}
+        {{partial "style.html" .}}
         {{partial "favicon.html" .}}
         {{partial "title.html" .}}
     </head>
