404 page and css fix

--- a/layouts/404.html
+++ b/layouts/404.html
@@ -10,7 +10,7 @@
         <header>
             <h1>404: Page Not Found</h1>
         </header>
-        <section>
+        <section id="404-section">
             <p>This page doesn't exist or you've stumbled across a broken link.</p>
             <a href="{{.Site.BaseURL}}">Return to homepage</a>
         </section>
