404 page and css fix

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -199,10 +199,10 @@ a[href *= "mailto"]:active {
     background-color: var(--accent-color);
     text-decoration: none;
 }
-#404-section a {
+#err-section a {
     color: var(--intralink-color);
 }
-#404-section a:active {
+#err-section a:active {
     color: var(--intralink-color-active);
 }
 
