--- a/static/css/style.css
+++ b/static/css/style.css
@@ -107,7 +107,7 @@ footer {
     padding-bottom: 2vh;
 }
 #home-main footer {
-    float: inline-end;
+    margin-top: 4vh;
 }
 
 /* Paragraph */
@@ -253,6 +253,10 @@ ol {
 }
 #main-nav li {
     display: inline;
+}
+#menu-section ul {
+    padding: 0;
+    margin: 0;
 }
 #menu-section li {
     list-style-type: none;
