funked the dumb stuff, deautisized css colors

--- a/layouts/404.html
+++ b/layouts/404.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <header>
-            <h1>404: Page Not Found</h1>
+            404: Page Not Found
         </header>
         <section id="err-section">
             <p>This page doesn't exist or you've stumbled across a broken link.</p>
