--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,18 +4,14 @@
 
 :root {
     /* Colors */
-    --bg-color: #080708;
-    --bg-color2: #292929;
-    --accent-color: #292929;
-    --accent-color2: #FFFFFF;
-    --accent-color3: #F1D302; 
-    --text-color: #FFFFFF;
-    --text-color2: #292929;
-    --text-color3: #F1D302;
-    --intralink-color: #DA3838;
-    --intralink-color-active: #F2B1B1;
-    --interlink-color: #25C7C7;
-    --interlink-color-active: #D3F4F4;
+    --black: #080708;
+    --dark-grey: #292929;
+    --white: #FFFFFF;
+    --red: #DA3838;
+    --light-pink: #F2B1B1;
+    --blue: #25C7C7;
+    --light-blue: #D3F4F4;
+    --yellow: #F1D302;
     /* Text formating */
     --text-size: 0.9em;
     --const: 1.2;
@@ -37,11 +33,15 @@
 
 body {
     font-family: 'Mulish', sans-serif;
-    color: var(--text-color);
-    background-color: var(--bg-color);
+    color: var(--white);
+    background-color: var(--black);
     margin: auto;
     max-width: var(--width);
     font-size: var(--text-size);
+}
+::selection {
+    color: var(--white);
+    background: var(--red);
 }
 
 /* Article */
@@ -73,7 +73,7 @@ section {
     padding-bottom: 1vh;
     display: block;
     border-left-style: solid;
-    border-color: var(--accent-color);
+    border-color: var(--dark-grey);
     border-width: 1px;
 }
 #autolist-section {
@@ -97,7 +97,7 @@ section {
 header {
     font-size: var(--text-size-h);
     font-weight: var(--font-weight);
-    color: var(--text-color);
+    color: var(--white);
     text-align: center;
     margin: auto;
     padding-top: 4vh;
@@ -110,7 +110,7 @@ header {
 /* Footer */
 
 footer {
-    color: var(--text-color2);
+    color: var(--dark-grey);
     text-align: center;
     padding-top: 6vh;
     padding-bottom: 2vh;
@@ -134,7 +134,6 @@ p {
     word-spacing: 1vw;
 }
 #home-nav-content {
-    font-size: var(--text-size-h5);
     text-align: center;
     padding-top: 1vh;
     padding-bottom: 1vh;
@@ -143,31 +142,31 @@ p {
 /* Links */
 
 a {
-    color: var(--intralink-color);
+    color: var(--red);
     text-decoration: none;
 }
 a[href *= "https://"] {
-    color: var(--interlink-color)
+    color: var(--blue)
 }
 a[href *= "mailto"] {
-    color: var(--interlink-color);
+    color: var(--blue);
 }
 a:hover {
     text-decoration: underline;
 }
 a:active {
-    color: var(--intralink-color-active)
+    color: var(--light-pink)
 }
 a[href *= "https://"]:active {
-    color: var(--interlink-color-active)
+    color: var(--light-blue)
 }
 a[href *= "mailto"]:active {
-    color: var(--interlink-color-active);
+    color: var(--light-blue);
 }
 #navbar-title a {
     font-size: var(--text-size-h4);
     font-weight: var(--font-weight);
-    color: var(--text-color);
+    color: var(--white);
     text-align: left;
     float: left;
 }
@@ -177,14 +176,14 @@ a[href *= "mailto"]:active {
     font-weight: var(--font-weight);
     text-align: center;
     border: solid;
-    border-color: var(--accent-color2);
+    border-color: var(--white);
     border-width: 1px;
     padding-left: 1vw;
     padding-right: 1vw;
     width: 10em;
 }
 #menu-section a:hover {
-    background-color: var(--bg-color2);
+    background-color: var(--dark-grey);
     text-decoration: none;
 }
 #home-nav-content a {
@@ -193,29 +192,31 @@ a[href *= "mailto"]:active {
     font-weight: var(--font-weight);
     text-align: center;
     border: solid;
-    border-color: var(--accent-color2);
+    border-color: var(--white);
     border-width: 1px;
     padding-left: 1vw;
     padding-right: 1vw;
     margin-top: 1vh;
     margin-bottom: 1vh;
+    margin-left: auto;
+    margin-right: auto;
     width: 10em;
 }
 #home-nav-content a:hover {
-    background-color: var(--accent-color);
+    background-color: var(--dark-grey);
     text-decoration: none;
 }
 #err-section a {
-    color: var(--intralink-color);
+    color: var(--red);
 }
 #err-section a:active {
-    color: var(--intralink-color-active);
+    color: var(--light-pink);
 }
 #path-menu-section a {
     display: block;
     font-size: var(--text-size-h5);
     border: solid;
-    border-color: var(--accent-color);
+    border-color: var(--dark-grey);
     border-width: 3px;
     padding-left: 0.7vw;
     padding-right: 0.7vw;
@@ -225,13 +226,13 @@ a[href *= "mailto"]:active {
 }
 #path-menu-section a:hover {
     text-decoration: none;
-    background-color: var(--bg-color2);
+    background-color: var(--dark-grey);
 }
 
 /* Headings */
 
 h1, h2, h3, h4, h5, h6 {
-    color: var(--text-color3);
+    color: var(--yellow);
 } 
 h1 {
     font-size: var(--text-size-h1);
@@ -296,10 +297,10 @@ li {
 /* Lines */
 
 hr {
-    background-color: var(--accent-color);
+    background-color: var(--dark-grey);
     border: none;
 }
-#navbar hr {
+#navbar hr {    margin: 0;
     height: 2px;
 }
 #footer hr {
@@ -317,8 +318,8 @@ hr {
 .note-table {
     border: solid;
     border-width: 4px;
-    border-color: var(--accent-color3);
-    background-color: var(--bg-color2);
+    border-color: var(--yellow);
+    background-color: var(--dark-grey);
     text-align: left;
     width: var(--width);
     margin-left: auto;
@@ -328,7 +329,7 @@ hr {
 .note-table tr, td, th {
     border: solid;
     border-width: 1px;
-    border-color: var(--accent-color2);
+    border-color: var(--white);
     padding-top: 0.5vh;
     padding-bottom: 0.5vh;
     padding-left: 0.5vw;
@@ -343,7 +344,7 @@ hr {
     border-left-width: 2px;
 }
 .note-table th {
-    color: var(--text-color3);
+    color: var(--yellow);
 }
 .note-table caption {
     caption-side: bottom;
@@ -395,7 +396,7 @@ tbody.it th {
 /* Blockquotes */
 
 blockquote p {
-    background-color: var(--bg-color2);
+    background-color: var(--dark-grey);
     display: block;
     margin-top: 1vh;
     margin-bottom: 1vh;
@@ -406,7 +407,7 @@ blockquote p {
     padding-top: 1vh;
     padding-bottom: 1vh;
     border-left: solid;
-    border-color: var(--accent-color3);
+    border-color: var(--yellow);
     border-width: 10px;
     font-style: italic;
 }
@@ -428,6 +429,10 @@ blockquote p {
     #home-article {
         float: none;
         max-width: 100%;
+    }
+    #home-nav-content ul {
+        padding: 0;
+        margin: 0;
     }
 }
 @media (max-width: 500px) {
