--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -9,8 +9,8 @@
     </head>
     <body>
         {{partial "navbar.html" .}}
+        {{partial "utils.html" .}}
         <div id="single-main">
-            {{partial "path-menu.html" .}}
             {{partial "header.html" .}}
             {{partial "toc.html" .}}
             <div id="content">
