--- a/layouts/shortcodes/fig.html
+++ b/layouts/shortcodes/fig.html
@@ -1,5 +1,7 @@
 <figure {{with .Get "class"}}class="{{.}}"{{end}}>
-    <img src="{{.Get "src"}}" alt="{{.Get "alt"}}">
+    <a href="{{.Get "src"}}">
+        <img src="{{.Get "src"}}" alt="{{.Get "alt"}}">
+    </a>
     <figcaption>
         {{with .Get "cap"}}
             {{.}}
