--- a/static/css/style.css
+++ b/static/css/style.css
@@ -317,13 +317,17 @@ hr {
 
 /* Tables */
 
+.note-table p {
+    margin: 0;
+}
 .note-table {
     border: solid;
     border-width: 4px;
     border-color: var(--yellow);
     background-color: var(--dark-grey);
     text-align: left;
-    width: var(--width);
+    max-width: fit-content;
+    width: 90vw;
     margin-left: auto;
     margin-right: auto;
     border-collapse: collapse;
