new notes, minor css changes

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -32,6 +32,9 @@
 
 /* Body */
 
+*{
+    scroll-behavior: smooth;
+}
 body {
     font-family: 'DM+Sans', sans-serif;
     color: var(--white);
@@ -326,8 +329,8 @@ hr {
     border-color: var(--yellow);
     background-color: var(--dark-grey);
     text-align: left;
-    max-width: fit-content;
     width: 90vw;
+    max-width: 1000px;
     margin-left: auto;
     margin-right: auto;
     border-collapse: collapse;
