new notes, minor css changes

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -305,7 +305,8 @@ hr {
     background-color: var(--dark-grey);
     border: none;
 }
-#navbar hr {    margin: 0;
+#navbar hr {    
+    margin: 0;
     height: 2px;
 }
 #footer hr {
