--- a/layouts/partials/head-meta.html
+++ b/layouts/partials/head-meta.html
@@ -1,2 +1,3 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
+<script src="https://kit.fontawesome.com/9ab7bfa7fc.js" crossorigin="anonymous"></script>
