--- a/static/css/style.css
+++ b/static/css/style.css
@@ -324,6 +324,14 @@ li {
     list-style-type: none;
 }
 
+ul ul ul ul li::marker {
+    content: "▸  ";
+}
+
+ul ul ul ul ul li::marker {
+    content: "▹  ";
+}
+
 /* Lines */
 
 hr {
