--- a/layouts/partials/style.html
+++ b/layouts/partials/style.html
@@ -1,2 +1,3 @@
 <link href="/css/style.css" rel="stylesheet">
 <link href="/css/fa.css" rel="stylesheet">
+<link rel="stylesheet" href="https://lalten.github.io/lmweb/style/latinmodern-mono.css" type="text/css" charset="utf-8" />
