--- a/static/css/toc.css
+++ b/static/css/toc.css
@@ -59,14 +59,15 @@
 .toc-content-list ol {
     counter-reset: item;
     list-style-type: none;
+    padding-bottom: 0;
+}
+.toc-content-list li {
+    padding-bottom: 0;
 }
 .toc-content-list li::before {
     content: counters(item, ".") " ";
     counter-increment: item;
     color: var(--accent-clr);
-}
-.toc-content-list ol {
-    padding-bottom: .5em;
 }
 .toc-content-list a {
     color: var(--txt-clr);
