--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -19,6 +19,8 @@
 <link rel="stylesheet" href="/css/auto-content.css">
 <link rel="stylesheet" href="/css/article.css">
 <link rel="stylesheet" href="/css/gallery.css">
+<link rel="stylesheet" href="/css/footer.css">
+<link rel="stylesheet" href="/css/tags.css">
 
 <script src="https://kit.fontawesome.com/9ab7bfa7fc.js" crossorigin="anonymous"></script>
 <script type="text/javascript" src="/js/sidebar.js" defer></script>
