--- a/static/css/sidebar.css
+++ b/static/css/sidebar.css
@@ -116,6 +116,7 @@
     align-items: center;
     justify-content: center;
     text-decoration: none;
+    transition: all 100ms;
 }
 .sidebar-content-navbar-link-link:hover {
     background-color: var(--accent-clr2);
