--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -23,6 +23,7 @@
 <link rel="stylesheet" href="/css/tags.css">
 
 <script src="https://kit.fontawesome.com/9ab7bfa7fc.js" crossorigin="anonymous"></script>
+<script data-goatcounter="https://pgersl.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
 <script type="text/javascript" src="/js/sidebar.js" defer></script>
 <script type="text/javascript" src="/js/navbar.js" defer></script>
 <script type="text/javascript" src="/js/section-highlight.js" defer></script>
