--- a/static/css/base.css
+++ b/static/css/base.css
@@ -164,9 +164,9 @@ nav {
     background-image: var(--gradient2);
     color: var(--accent5);
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     padding: var(--spacer);
 }
 
@@ -178,12 +178,19 @@ nav i {
     font-size: var(--tiny-size);
 }
 
+.nav-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    width: 95vw;
+}
+
 .nav-links {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    padding-left: 2em;
 }
 
 .main-nav-links {
@@ -239,62 +246,17 @@ nav i {
     filter: brightness(1.5);
 }
 
-nav.toggled {
-    flex-direction: column;
-    align-items: flex-start;
-}
-
-nav.toggled .nav-links, nav.toggled .nav-utils {
-    display: flex;
-}
-
-nav.toggled .nav-links {
-    flex-direction: column;
-    align-items: flex-start;
-}
-
-nav.toggled .main-nav-links {
-    padding-right: 0;
-    border-right: none;
-    flex-wrap: wrap;
-}
-
-nav.toggled .sites-nav-links {
-    padding-left: 0;
-    flex-wrap: wrap;
-}
-
-nav.toggled .nav-utils {
-    padding: 1em 0 0 2.3em;
-}
-
-#nav-toggle {
-    outline: none;
-    border: none;
-    background-color: #00000000;
-    color: var(--light1);
-    padding-left: 2.5em;
-    display: none;
-}
-
-#nav-toggle:hover {
-    cursor: pointer;
-}
-
-#nav-toggle i {
-    font-size: 20px;
-}
-
-nav.toggled #nav-toggle {
-    margin-bottom: 1em;
-}
-
-@media (max-width:570px) {
-    #nav-toggle {
-        display: block;
+@media (max-width:450px) {
+    .nav-links {
+        flex-direction: column;
+        align-items: flex-start;
     }
-    .nav-links, .nav-utils {
-        display: none;
+    .sites-nav-links {
+        padding-left: 0;
+    }
+    .main-nav-links {
+        padding-right: 0;
+        border-right: none;
     }
 }
 
