--- a/layouts/_default/contact.html
+++ b/layouts/_default/contact.html
@@ -6,11 +6,11 @@
         <div class="section-content" id="contact">
             <form id="contact-form" action="https://formspree.io/f/moqgebey" method="POST">
                 <div id="name-email">
-                    <input type="text" id="name" name="name" placeholder="Name" required>
+                    <input type="text" id="name" name="name" placeholder="{{if strings.HasPrefix .RelPermalink "/cs/"}}Jméno{{else if strings.HasPrefix .RelPermalink "/fr/"}}Nom{{else}}Name{{end}}" required>
                     <input type="email" id="email" name="email" placeholder="Email" required>
                 </div>
-                <textarea id="message" name="message" rows="8" placeholder="Message" required></textarea>
-                <button type="submit" id="send">Send</button>
+                <textarea id="message" name="message" rows="8" placeholder="{{if strings.HasPrefix .RelPermalink "/cs/"}}Zpráva{{else if strings.HasPrefix .RelPermalink "/fr/"}}Message{{else}}Message{{end}}" required></textarea>
+                <button type="submit" id="send">{{if strings.HasPrefix .RelPermalink "/cs/"}}Odeslat{{else if strings.HasPrefix .RelPermalink "/fr/"}}Soumettre{{else}}Submit{{end}}</button>
             </form>
         </div>
     </section>
