--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -63,7 +63,7 @@
                         {{else if strings.HasPrefix .RelPermalink "/fr/"}}
                             En savoir plus:
                         {{else}}
-                            Find me:
+                            Explore more:
                         {{end}}
                     </strong>
                     {{range .Site.Menus.sites}}
